# aclaf

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .vale.ini  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  biome.json  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sonar-project.properties  wrangler.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  enhancement.yml  support.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml
.vale/config/vocabularies/Aclaf/: accept.txt  reject.txt
cli/: pyproject.toml
cli/src/aclaf_cli/: app.py
docs/: .gitignore  Justfile  README.md  index.md  mkdocs.yml  package.json  pyproject.toml  roadmap.md  vision.md
docs/.includes/: internal.md
docs/.overrides/: main.html
docs/blog/: .authors.yml
docs/content/: index.md  license.md
docs/content/explanation/: index.md
docs/content/guides/: index.md
docs/content/reference/: index.md
docs/explanation/: architecture.md
docs/guides/: index.md
docs/reference/: index.md
docs/reference/api/parser/: exceptions.md  index.md  specifications.md
docs/tutorials/: index.md
src/aclaf/: __init__.py  _application.py  _command.py  _command_hooks.py  _context.py  _conversion.py  _converters.py  _errors.py  _help.py  _hooks.py  _parameters.py  _response.py  _runtime.py  _runtime_hooks.py  _types.py  _validation.py  exceptions.py  metadata.py  protocols.py  types.py  validators.py
src/aclaf/_internal/: _inspect.py  _metadata.py
src/aclaf/console/: __init__.py  _base.py  _basic.py  _mock.py  _protocol.py  _rich.py  exceptions.py
src/aclaf/conversion/: __init__.py  _exceptions.py  _registry.py  _standard.py
src/aclaf/execution/: __init__.py  _command.py  _context.py  _exceptions.py  _hook_registry.py  _hooks.py  _parameter.py  _types.py
src/aclaf/logging/: __init__.py  _loguru.py  _mock.py  _null.py  _protocol.py  _stdlib.py  _structlog.py
src/aclaf/metadata/: __init__.py  _metadata.py
src/aclaf/parser/: __init__.py  _base.py  _command.py  _configuration.py  _constants.py  _exceptions.py  _parameters.py  _parser.py  _utils.py  constants.py  exceptions.py  types.py
src/aclaf/registration/: __init__.py  _command.py  _exceptions.py  _parameters.py
src/aclaf/rendering/: _json.py  _markup.py  _messages.py  _plain.py  _protocol.py
src/aclaf/response/: __init__.py  _exceptions.py  _pretty.py  _protocols.py  _types.py
src/aclaf/validation/: __init__.py  _exceptions.py  _registry.py  _shared.py
src/aclaf/validation/command/: __init__.py  _conflict.py  _constraint.py  _dependency.py
src/aclaf/validation/parameter/: __init__.py  _comparison.py  _datetime.py  _mapping.py  _numeric.py  _path.py  _string.py
tests/: conftest.py
tests/benchmarks/: parser_benchmarks.py  test_benchmarks.py  test_cascading_benchmarks.py  test_large_scale_cli_benchmarks.py  test_parser_benchmarks.py
tests/integration/: test_complex_scenarios.py  test_docker_like_cli.py  test_git_like_cli.py  test_grep.py  test_kubectl_like_cli.py  test_negative_numbers_integration.py  test_tar.py
tests/integration/parser/: test_negative_numbers_integration.py
tests/integration/phase/: test_conversion_integration.py  test_error_propagation.py  test_execution_integration.py  test_validation_integration.py
tests/integration/spec_tools/: __init__.py  test_grep.py  test_tar.py
tests/properties/: strategies.py  test_negative_numbers_properties.py  test_parser.py  test_parser_regressions.py  test_subcommands.py  test_underscore_conversion_properties.py  test_value_flattening_properties.py
tests/properties/validation/: test_command_validators.py  test_parameter_validators.py
tests/security/: __init__.py  test_edge_cases.py  test_injection.py  test_security_edge_cases.py  test_validation.py
tests/unit/: conftest.py  test_exceptions.py
tests/unit/application/: test_app.py
tests/unit/builder/: test_command_builder.py  test_command_decorators.py
tests/unit/console/: test_basic_console.py  test_console_thread_safety.py
tests/unit/context/: test_context_creation.py  test_context_hierarchy.py
tests/unit/conversion/: conftest.py  test_basic_types.py  test_enum_conversion.py  test_generic_types.py  test_protocol_conversion.py  test_registry.py  test_union_types.py
tests/unit/execution/: conftest.py  test_async_detection.py  test_context_creation.py  test_context_hierarchy.py  test_error_handling.py  test_execution_flow.py  test_parameter_conversion.py  test_parameter_injection.py  test_parameter_validation.py  test_response_handling.py  test_runtime_command.py  test_spec_conversion.py
tests/unit/parameters/: conftest.py  test_basic_extraction.py  test_conflict_detection.py  test_edge_cases.py  test_from_annotation.py  test_from_function.py  test_metadata_extraction.py  test_metadata_ordering.py  test_properties.py  test_runtime_conversion.py
tests/unit/parser/: conftest.py  test_accumulation.py  test_advanced_features.py  test_branch_coverage.py  test_combined_flags.py  test_configuration_flags.py  test_edge_cases.py  test_flag_bundling.py  test_flag_negation.py  test_flag_values.py  test_long_options.py  test_negative_numbers.py  test_not_implemented.py  test_option_resolution.py  test_options.py  test_parameters.py  test_parser_edge_cases.py  test_parser_errors.py  test_positionals.py  test_posix_mode.py  test_short_options.py  test_spec_validation.py  test_subcommands.py  test_trailing_args.py  test_underscore_to_dash_conversion.py  test_value_flattening.py
tests/unit/registration/: test_application.py  test_command_cascading.py  test_command_decorators.py  test_command_registration.py  test_converter_decorator.py
tests/unit/runtime/: conftest.py  test_async_detection.py  test_command.py  test_execution_flow.py  test_spec_conversion.py
tests/unit/validation/: conftest.py  test_registry.py  test_validator_protocol.py
tests/unit/validation/command/: test_conflict.py  test_constraint.py  test_dependency.py
tests/unit/validation/parameter/: test_comparison.py  test_datetime.py  (+5 more)
